# FEMCourse

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_Eigen3_Armadillo.txt  teste1.vtk
Gmsh/: t1.geo
headers/: CMakeLists.txt  Makefile  TDataTypes.h  TIntRule1d.h  TIntRuleQuad.h  TIntRuleTriangle.h  TMatrix.h  TVec.h  TVecNum.h  cmake_install.cmake  tanalysis.h  telemento.h  telemento0d.h  telemento1d.h  telementoQuad.h  telementoTriangle.h  tmalha.h  tmaterial.h  tmaterial1d.h  tmaterial2d.h  tmaterialbc.h  tno.h  tpanic.h
headers2018/: Analysis.h  Assemble.h  CMakeLists.txt  CompElement.h  CompElementTemplate.h  CompMesh.h  DOF.h  DataTypes.h  GeoElement.h  GeoElementSide.h  GeoElementTemplate.h  GeoMesh.h  GeoNode.h  Geom1d.h  GeomQuad.h  GeomTetrahedron.h  GeomTriangle.h  IntPointData.h  IntRule.h  IntRule1d.h  IntRuleQuad.h  IntRuleTetrahedron.h  IntRuleTriangle.h  L2Projection.h  Makefile  MathStatement.h  Poisson.h  PossProcessTemplate.h  PostProcess.h  PostProcessTemplate.h  ReadGmsh.cpp  ReadGmsh.h  Shape1d.h  ShapeQuad.h  ShapeTetrahedron.h  ShapeTriangle.h  Topology1d.h  TopologyQuad.h  TopologyTetrahedron.h  TopologyTriangle.h  (+4 more)
mainprograms/: CMakeLists.txt  Fem2018  FemSC  Makefile  TestIntegrate  TestIntegrate.cpp  TestMatrix  TestOneDProblem  TestOneDProblem.cpp  TestTwoDProblem  TestTwoDProblem.cpp  Testmatrix.cpp  cmake_install.cmake  main.cpp  main2018.cpp  t1.msh
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
src vazio/: CMakeLists.txt  Makefile  TIntRule1d.cpp  TIntRuleQuad.cpp  TIntRuleTriangle.cpp  TMatrix.cpp  TVec.cpp  TVecNum.cpp  cmake_install.cmake  fem_sc.cpp  tanalysis.cpp  telemento.cpp  telemento0d.cpp  telemento1d.cpp  telementoQuad.cpp  telementoTriangle.cpp  tmalha.cpp  tmaterial.cpp  tmaterial1d.cpp  tmaterial2d.cpp  tmaterialbc.cpp  tno.cpp
src_2018/: Analysis.cpp  Assemble.cpp  CMakeLists.txt  CompElement.cpp  CompElementTemplate.cpp  CompMesh.cpp  DOF.cpp  GeoElement.cpp  GeoElementSide.cpp  GeoElementTemplate.cpp  GeoMesh.cpp  GeoNode.cpp  Geom1d.cpp  GeomQuad.cpp  GeomTetrahedron.cpp  GeomTriangle.cpp  IntRule.cpp  IntRule1d.cpp  IntRuleQuad.cpp  IntRuleTetrahedron.cpp  IntRuleTriangle.cpp  L2Projection.cpp  Makefile  MathStatement.cpp  Poisson.cpp  PostProcess.cpp  ReadGmsh.cpp  Shape1d.cpp  ShapeQuad.cpp  ShapeTetrahedron.cpp  ShapeTriangle.cpp  Topology1d.cpp  TopologyQuad.cpp  TopologyTetrahedron.cpp  TopologyTriangle.cpp  VTKGeoMesh.cpp  cmake_install.cmake
tinyxml/: Makefile  cmake_install.cmake
